--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,20 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout
       - uses: actions/checkout@v2
+      - with:
+            persist-credentials: false
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install and Build
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+            npm install
+            npm run build
+      - name: Deploy # 将打包内容发布到 github page
+        uses: JamesIves/github-pages-deploy-action@3.5.9 # 使用别人写好的 actions
+        with:  # 自定义环境变量
+            ACCESS_TOKEN: ${{ secrets.CI_TOKEN }} # VUE_ADMIN_TEMPLATE 是我的 secret 名称，需要替换成你的
+            BRANCH: master
+            FOLDER: dist
+            REPOSITORY_NAME: ilovemp/ilovemp.github.io # 这是我的 github page 仓库
+            TARGET_FOLDER: github-actions-demo # 打包的文件将放到静态服务器 github-actions-demo 目录下
