fix:持续集成设置更改

--- a/package.json
+++ b/package.json
@@ -59,5 +59,6 @@
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
-  }
+  },
+  "homepage": "https://Carlos-Handsome-TJ.github.io/github-actions-demo"
 }
