--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@master
         with:
             persist-credentials: false
       - name: Install and Build
@@ -38,4 +38,4 @@ jobs:
             BRANCH: master
             FOLDER: dist
             REPOSITORY_NAME: ilovemp/ilovemp.github.io # 这是我的 github page 仓库
-            TARGET_FOLDER: github-actions-demo # 打包的文件将放到静态服务器 github-actions-demo 目录下
+            TARGET_FOLDER: github-actions-demo1 # 打包的文件将放到静态服务器 github-actions-demo 目录下
