--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.5 # 使用别人写好的 actions
         with:  # 自定义环境变量
             ACCESS_TOKEN: ${{ secrets.CI_TOKEN }} # VUE_ADMIN_TEMPLATE 是我的 secret 名称，需要替换成你的
-            BRANCH: master
-            FOLDER: dist
+            BRANCH: gh-pages
+            FOLDER: build
 #            REPOSITORY_NAME: ilovemp/ilovemp.github.io # 这是我的 github page 仓库
 #            TARGET_FOLDER: github-actions-demo1 # 打包的文件将放到静态服务器 github-actions-demo 目录下
