--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
             persist-credentials: false
       - name: Install and Build
         run: |
-            npm install
-            npm run build
+            yarn install
+            yarn run build
       - name: Deploy # 将打包内容发布到 github page
         uses: JamesIves/github-pages-deploy-action@4.1.5 # actions
         with:  # 自定义环境变量
