fix:持续集成设置更改

--- a/package.json
+++ b/package.json
@@ -61,5 +61,6 @@
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
-  }
+  },
+  "homepage": "https://carlos-handsome-tj.github.io/CI-demo"
 }
