--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demo1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://carlos-handsome-tj.github.io/CI-demo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -61,6 +62,5 @@
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
-  },
-  "homepage": "https://carlos-handsome-tj.github.io/CI-demo"
+  }
 }
